# formatnix

./: CHANGELOG.md  formatnix.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.5/: formatnix-0.1.0.0-inplace.conf  package.cache
src/: Main.hs  NixParser.hs
test/: NixParserSpec.hs  Spec.hs
